--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
 
+<P> Hi Vincent! </P>
+
+<img src="https://imgur.com/a/cEs5VQA">
+
 <HR>
 
 </BODY>
