--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
 
-<P> Hi Vincent! </P>
+<P> Hi Folken! </P>
 
 <img src="./Y6DiOeI.jpg">
 
