--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
+<!DOCTYPE html>
+
 <HTML>
 
-<HEAD>
+    <HEAD>
+        <TITLE>JohnnyDevo's Site</TITLE>
+        <link href='./style.css' rel='stylesheet'>
+    </HEAD>
 
-<TITLE>Your Title Here</TITLE>
+    <BODY>
+        <div id="page-container">
+            <iframe scrolling=no src="./header/header.html" id="header"></iframe>
+            <div id="content-wrap">
 
-</HEAD>
-
-<BODY BGCOLOR="FFFFFF">
-
-<HR>
-
-<H1>This is a Header</H1>
-
-<H2>This is a Medium Header</H2>
-
-<P> This is a new paragraph!
-
-<P> <B>This is a new paragraph!</B>
-
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
-
-<P> Hi Folken! </P>
-
-<img src="./Y6DiOeI.jpg">
-
-<HR>
-
-</BODY>
+                <H1>Introduction</H1>
+                <P> On this page, I will be giving a brief introduction about myself and the purpose of this website, then I will show options for where the user can go from here. </P>
+            
+            </div>
+            <iframe scrolling=no src="./footer/footer.html" id="footer"></iframe>
+        </div>
+    </BODY>
 
 </HTML> 
