change links to absolute paths, add some more infrastructure

--- a/contactme/index.html
+++ b/contactme/index.html
@@ -4,19 +4,19 @@
 
     <HEAD>
         <TITLE>Contact Me</TITLE>
-        <link href='../style.css' rel='stylesheet'>
+        <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
         <div id="page-container">   
-            <iframe scrolling=no src="../header/header.html" id="header"></iframe>
+            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
             <div id="content-wrap">
 
                 <H1>Contact info</H1>
                 <P>On this page, effective ways to contact me. Probably my discord ID, steam profile, and email address.</P>
 
             </div>
-            <iframe scrolling=no src="../footer/footer.html" id="footer"></iframe>
+            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
         </div>
     </BODY>
 
