--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 
     <HEAD>
         <TITLE>JohnnyDevo's Site</TITLE>
-        <link href='./style.css' rel='stylesheet'>
+        <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
         <div id="page-container">
-            <iframe scrolling=no src="./header/header.html" id="header"></iframe>
+            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
             <div id="content-wrap">
 
                 <H1>Introduction</H1>
                 <P> On this page, I will be giving a brief introduction about myself and the purpose of this website, then I will show options for where the user can go from here. </P>
             
             </div>
-            <iframe scrolling=no src="./footer/footer.html" id="footer"></iframe>
+            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
         </div>
     </BODY>
 
