--- a/profile/index.html
+++ b/profile/index.html
@@ -4,19 +4,19 @@
 
     <HEAD>
         <TITLE>User Profile</TITLE>
-        <link href='../style.css' rel='stylesheet'>
+        <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
         <div id="page-container">
-            <iframe scrolling=no src="../header/header.html" id="header"></iframe>
+            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
             <div id="content-wrap">
 
                 <H1>Placeholder</H1>
                 <P>On this page, a user can either sign in, sign up, sign out, or manage their profile.</P>
 
             </div>
-            <iframe scrolling=no src="../footer/footer.html" id="footer"></iframe>
+            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
         </div>
     </BODY>
 
