--- a/header/index.html
+++ b/header/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href='./header.css' rel='stylesheet'>
+        <link href='/header/header.css' rel='stylesheet'>
     </head>
 
     <body>
         <nav>
             <a href="/index.html" target="_parent">Home</a>
-            <a href="/cards/index.html/"></a>
+            <a href="/cards/index.html/" target="_parent">Cards</a>
+            <form id="search" action="/cards/view/index.html" method="GET">
+                <input type="text" id="searchBar" name="card" placeholder="card lookup...">
+                <button type="submit" id="submitButton"><img src="/header/search-icon.png"></button>
+            </form>
             <a id="user" href="/profile/index.html" target="_parent">Sign In</a>
         </nav>
     </body>
