--- a/header/index.html
+++ b/header/index.html
@@ -8,7 +8,7 @@
         <nav>
             <a href="/index.html" target="_parent">Home</a>
             <a href="/cards/index.html/" target="_parent">Cards</a>
-            <form id="search" action="/cards/view/index.html" method="GET">
+            <form id="search" action="/cards/view/index.html" method="GET" target="_parent">
                 <input type="text" id="searchBar" name="card" placeholder="card lookup...">
                 <button type="submit" id="submitButton"><img src="/header/search-icon.png"></button>
             </form>
