--- a/header/index.html
+++ b/header/index.html
@@ -10,7 +10,9 @@
             <a href="/cards/index.html/" target="_parent">Cards</a>
             <form id="search" action="/cards/view/index.html" method="GET" target="_parent">
                 <input type="text" id="searchBar" name="card" placeholder="card lookup...">
-                <button type="submit" id="submitButton"><img src="/header/search-icon.png"></button>
+                <div>
+                    <button type="submit" id="submitButton"><img id="searchIcon" src="/header/search-icon.png"></button>
+                </div>
             </form>
             <a id="user" href="/profile/index.html" target="_parent">Sign In</a>
         </nav>
