general improvements to site layout and appearance

--- a/header/index.html
+++ b/header/index.html
@@ -6,8 +6,9 @@
 
     <body>
         <nav>
+            <img src="/favicon.ico" id="fox">
             <a href="/index.html" target="_parent">Home</a>
-            <a href="/cards/index.html/" target="_parent">Cards</a>
+            <a href="/cards/index.html" target="_parent">Cards</a>
             <form id="search" action="/cards/view/index.html" method="GET" target="_parent">
                 <input type="text" id="searchBar" name="card" placeholder="card lookup...">
                 <button type="submit" id="submitButton"><img id="searchIcon" src="/header/search-icon.png"></button>
