use javascript instead of iframes for header and footer, add smaller screen support

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,15 +8,15 @@
     </HEAD>
 
     <BODY>
-        <div id="page-container">   
-            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
+        <div id="page-container">
+            <script type="text/javascript" src="/js/make-header.js"></script>
             <div id="content-wrap">
 
                 <H1>More details about myself</H1>
                 <P>On this page, I'll provide links to things like my github profile, and provide additional info about what I hope to accomplish with this project.</P>
 
             </div>
-            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
+            <script type="text/javascript" src="/js/make-footer.js"></script>
         </div>
     </BODY>
 
