--- a/cards/index.html
+++ b/cards/index.html
@@ -9,7 +9,7 @@
 
     <BODY>
         <div id="page-container">   
-            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
+            <script type="text/javascript" src="/js/make-header.js"></script>
             <div id="content-wrap">
 
                 <H1>Cards</H1>
@@ -22,7 +22,7 @@
                 </form>
 
             </div>
-            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
+            <script type="text/javascript" src="/js/make-footer.js"></script>
         </div>
     </BODY>
 
