--- a/contactme/index.html
+++ b/contactme/index.html
@@ -9,14 +9,14 @@
 
     <BODY>
         <div id="page-container">   
-            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
+            <script type="text/javascript" src="/js/make-header.js"></script>
             <div id="content-wrap">
 
                 <H1>Contact info</H1>
                 <P>On this page, effective ways to contact me. Probably my discord ID, steam profile, and email address.</P>
 
             </div>
-            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
+            <script type="text/javascript" src="/js/make-footer.js"></script>
         </div>
     </BODY>
 
