--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <BODY>
         <div id="page-container">
-            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
+            <script type="text/javascript" src="/js/make-header.js"></script>
             <div id="content-wrap">
 
                 <H1>Introduction</H1>
                 <P> On this page, I will be giving a brief introduction about myself and the purpose of this website, then I will show options for where the user can go from here. </P>
             
             </div>
-            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
+            <script type="text/javascript" src="/js/make-footer.js"></script>
         </div>
     </BODY>
 
