--- a/profile/index.html
+++ b/profile/index.html
@@ -9,14 +9,14 @@
 
     <BODY>
         <div id="page-container">
-            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
+            <script type="text/javascript" src="/js/make-header.js"></script>
             <div id="content-wrap">
 
                 <H1>Placeholder</H1>
                 <P>On this page, a user can either sign in, sign up, sign out, or manage their profile.</P>
 
             </div>
-            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
+            <script type="text/javascript" src="/js/make-footer.js"></script>
         </div>
     </BODY>
 
