fix up user logic

--- a/profile/index.html
+++ b/profile/index.html
@@ -14,6 +14,8 @@
 
                 <H1>Placeholder</H1>
                 <P>On this page, a user can either sign in, sign up, sign out, or manage their profile.</P>
+                <br>
+                <p><a onclick="signout()">sign out</a></p>
 
             </div>
             <script type="text/javascript" src="/js/make-footer.js"></script>
