--- a/signin/index.html
+++ b/signin/index.html
@@ -20,7 +20,7 @@
                     <label for="password">password:</label>
                     <input type="text" id="password" name="password">
                     <br>
-                    <input type="button" name="submitbutton" value="submit" onClick="signin(this.form)">
+                    <input type="button" name="submitbutton" value="submit" onClick="signin(this.form);">
                 </form>
                 <br><br><br><P>Don't have an account? <a href="/signup/index.html">Sign Up!</a></P>
 
