--- a/signup/index.html
+++ b/signup/index.html
@@ -14,7 +14,7 @@
             <div id="content-wrap">
 
                 <H1>Sign up here</H1>
-                <form name="signup" action="" method="POST">
+                <form name="signupform" action="" method="POST">
                     <label for="username">username:</label>
                     <input type="text" id="username" name="username">
                     <br>
@@ -33,7 +33,7 @@
                     <label for="contact_info">contact info:</label>
                     <input type="text" id="contact_info" name="contact_info">
                     <br>
-                    <input type="button" name="submitbutton" value="submit" onClick="signup(this.form)">
+                    <input type="button" name="submitbutton" value="submit" onClick="signup(this.form);">
                 </form>
 
             </div>
