--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <HTML>
 
     <HEAD>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
+
         <TITLE>JohnnyDevo's Site</TITLE>
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
