--- a/signup/index.html
+++ b/signup/index.html
@@ -3,6 +3,9 @@
 <HTML>
 
     <HEAD>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
+
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/signup.js"></script>
