rework how user checking and header making works

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,20 +6,22 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage();</script>
         <TITLE>About Me</TITLE>
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
         <div id="page-container">
-            <script type="text/javascript" src="/js/make-header.js"></script>
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <H1>More details about myself</H1>
                 <P>On this page, I'll provide links to things like my github profile, and provide additional info about what I hope to accomplish with this project.</P>
 
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
