--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage();</script>
         <TITLE>JohnnyDevo's Site</TITLE>
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
         <div id="page-container">
-            <script type="text/javascript" src="/js/make-header.js"></script>
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <H1>Introduction</H1>
                 <P> On this page, I will be giving a brief introduction about myself and the purpose of this website, then I will show options for where the user can go from here. </P>
             
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
