--- a/profile/index.html
+++ b/profile/index.html
@@ -6,13 +6,16 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage(true);</script>
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
+        <script type="text/javascript" src="/js/signout.js"></script>
     </HEAD>
 
     <BODY>
         <div id="page-container">
-            <script type="text/javascript" src="/js/make-header.js"></script>
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <H1>Placeholder</H1>
@@ -21,7 +24,7 @@
                 <p><a onclick="signout()">sign out</a></p>
 
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
