--- a/signin/index.html
+++ b/signin/index.html
@@ -6,6 +6,8 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage();</script>
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/signin.js"></script>
@@ -13,7 +15,7 @@
 
     <BODY>
         <div id="page-container">
-            <script type="text/javascript" src="/js/make-header.js"></script>
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <form name="signup" action="" method="POST">
@@ -28,7 +30,7 @@
                 <br><br><br><P>Don't have an account? <a href="/signup/index.html">Sign Up!</a></P>
 
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
