--- a/cards/index.html
+++ b/cards/index.html
@@ -6,13 +6,15 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage();</script>
         <TITLE>Cards</TITLE>
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
-        <div id="page-container">   
-            <script type="text/javascript" src="/js/make-header.js"></script>
+        <div id="page-container">
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <H1>Cards</H1>
@@ -25,7 +27,7 @@
                 </form>
 
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
