--- a/contactme/index.html
+++ b/contactme/index.html
@@ -6,20 +6,22 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage();</script>
         <TITLE>Contact Me</TITLE>
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
     <BODY>
-        <div id="page-container">   
-            <script type="text/javascript" src="/js/make-header.js"></script>
+        <div id="page-container">
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <H1>Contact info</H1>
                 <P>On this page, effective ways to contact me. Probably my discord ID, steam profile, and email address.</P>
 
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
