--- a/signup/index.html
+++ b/signup/index.html
@@ -6,6 +6,8 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
+        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript">onLoadPage();</script>
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/signup.js"></script>
@@ -13,7 +15,7 @@
 
     <BODY>
         <div id="page-container">
-            <script type="text/javascript" src="/js/make-header.js"></script>
+            <nav id="header"></nav>
             <div id="content-wrap">
 
                 <H1>Sign up here</H1>
@@ -40,7 +42,7 @@
                 </form>
 
             </div>
-            <script type="text/javascript" src="/js/make-footer.js"></script>
+            <script type="text/javascript" src="/js/footer.js"></script>
         </div>
     </BODY>
 
