Add the footer to the same timing as the header logic

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,7 +6,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>About Me</TITLE>
         <link href='/style.css' rel='stylesheet'>
@@ -21,7 +21,7 @@
                 <P>On this page, I'll provide links to things like my github profile, and provide additional info about what I hope to accomplish with this project.</P>
 
             </div>
-            <script type="text/javascript" src="/js/footer.js"></script>
+            <nav id="footer"></nav>
         </div>
     </BODY>
 
