--- a/profile/index.html
+++ b/profile/index.html
@@ -6,7 +6,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript">onLoadPage(true);</script>
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
@@ -24,7 +24,7 @@
                 <p><a onclick="signout()">sign out</a></p>
 
             </div>
-            <script type="text/javascript" src="/js/footer.js"></script>
+            <nav id="footer"></nav>
         </div>
     </BODY>
 
