--- a/contactme/index.html
+++ b/contactme/index.html
@@ -6,7 +6,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>Contact Me</TITLE>
         <link href='/style.css' rel='stylesheet'>
@@ -21,7 +21,7 @@
                 <P>On this page, effective ways to contact me. Probably my discord ID, steam profile, and email address.</P>
 
             </div>
-            <script type="text/javascript" src="/js/footer.js"></script>
+            <nav id="footer"></nav>
         </div>
     </BODY>
 
