--- a/signin/index.html
+++ b/signin/index.html
@@ -6,7 +6,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
@@ -30,7 +30,7 @@
                 <br><br><br><P>Don't have an account? <a href="/signup/index.html">Sign Up!</a></P>
 
             </div>
-            <script type="text/javascript" src="/js/footer.js"></script>
+            <nav id="footer"></nav>
         </div>
     </BODY>
 
