working card retrieval architecture

--- a/cards/index.html
+++ b/cards/index.html
@@ -21,9 +21,9 @@
                 <H1>Cards</H1>
                 <P>This page will query the server for and display all cards in the database.</P>
 
-                <form action="/cards/view/index.html" method="GET">
+                <form action="/cards/search/index.html" method="GET">
                     <label for="card">Search for a specific card:</label>
-                    <input id="card" name="card" type="text"><br><br>
+                    <input id="search" name="search" type="text"><br><br>
                     <input type="submit" value="Submit">
                 </form>
 
