--- a/cards/search/index.html
+++ b/cards/search/index.html
@@ -19,6 +19,7 @@
             <div id="content-wrap">
 
                 <H1>results view</H1>
+                <p id="search-text"></p>
 
                 <div id="results"></div>
             </div>
