--- a/cards/index.html
+++ b/cards/index.html
@@ -11,6 +11,8 @@
         <TITLE>Cards</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/get-all-cards.js"></script>
+
+        <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
     <BODY onload="getCards()">
@@ -26,6 +28,28 @@
                     <input id="search" name="search" type="text"><br><br>
                     <input type="submit" value="Submit">
                 </form>
+
+                <div id="cards-container">
+                    <div class="card">
+                        <img class="card-portrait" src="/portraits/ATTACK.png">
+                        <img class="card-description-background" src="/portraits/ICE/ATTACK_desc.png">
+                        <img class="card-frame" src="/portraits/ICE/ATTACK_frame.png">
+                        <img class="card-banner" src="/portraits/RARE_banner.png">
+                        <img class="card-energy-symbol" src="/portraits/ICE/energy.png">
+                        <div class="card-cost-container">
+                            <div class="card-cost-text">1</div>
+                        </div>
+                        <div class="card-name-container">
+                            <div class="card-name-text">Frozen Capsule</div>
+                        </div>
+                        <div class="card-type-container">
+                            <div class="card-type-text">Attack</div>
+                        </div>
+                        <div class="card-description-container">
+                            <div class="card-description-text">Deal 6 damage. <br> <span class="keyword">Transmute</span> this card. <br> <span class="keyword">Mutable:</span> When <br> <span class="keyword">Transmuted,</span> this gains <br> 2 <span class="keyword">Purity.</span></div>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="results"></div>
 
