combine card retrieval into a single script file

--- a/cards/index.html
+++ b/cards/index.html
@@ -10,12 +10,12 @@
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>Cards</TITLE>
         <link href='/style.css' rel='stylesheet'>
-        <script type="text/javascript" src="/js/get-all-cards.js"></script>
+        <script type="text/javascript" src="/js/get-cards.js"></script>
 
         <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
-    <BODY onload="getCards()">
+    <BODY onload="getAllCards()">
         <div id="page-container">
             <nav id="header"></nav>
             <div id="content-wrap">
