--- a/cards/search/index.html
+++ b/cards/search/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>Card Search</TITLE>
         <link href='/style.css' rel='stylesheet'>
-        <script type="text/javascript" src="/js/search-cards.js"></script>
+        <script type="text/javascript" src="/js/get-cards.js"></script>
     </HEAD>
 
     <BODY onload="doSearch()">
