--- a/cards/search/index.html
+++ b/cards/search/index.html
@@ -21,7 +21,7 @@
                 <H1>results view</H1>
                 <p id="search-text"></p>
 
-                <div id="results"></div>
+                <div id="cards-container"></div>
             </div>
             <nav id="footer"></nav>
         </div>
