--- a/cards/index.html
+++ b/cards/index.html
@@ -23,6 +23,9 @@
                 <H1>Cards</H1>
                 <P>This page will query the server for and display all cards in the database.</P>
 
+                <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
+                <button id="toggle-upgrades" onclick="toggleUpgrades()">show upgrades</button>
+                
                 <form action="/cards/search/index.html" method="GET">
                     <label for="card">Search for a specific card:</label>
                     <input id="search" name="search" type="text"><br><br>
