--- a/cards/search/index.html
+++ b/cards/search/index.html
@@ -21,6 +21,9 @@
                 <H1>results view</H1>
                 <p id="search-text"></p>
 
+                <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
+                <button id="toggle-upgrades" onclick="toggleUpgrades()">show upgrades</button>
+
                 <div id="cards-container"></div>
             </div>
             <nav id="footer"></nav>
