--- a/cards/search/index.html
+++ b/cards/search/index.html
@@ -11,6 +11,8 @@
         <TITLE>Card Search</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/get-cards.js"></script>
+
+        <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
     <BODY onload="doSearch()">
