--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>JohnnyDevo's Site</TITLE>
         <link href='/style.css' rel='stylesheet'>
+
+        <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
     <BODY>
@@ -20,6 +22,17 @@
                 <H1>Introduction</H1>
                 <P> On this page, I will be giving a brief introduction about myself and the purpose of this website, then I will show options for where the user can go from here. </P>
             
+                <div class="keyword-container">
+                    <img class="keyword-background-top" src="/tips/tipTop.png">
+                    <div class="keyword-content">
+                        <div class="keyword-text">
+                            <p class="keyword-name">Swappable</p>
+                            <p class="keyword-description">A Swappable card is <span class="keyword">Paired</span> with another card and, while selected, can be freely <span class="keyword">Swapped</span> between the two by pressing #b</p>
+                        </div>
+                        <img class="keyword-background-middle" src="/tips/tipMid.png">
+                    </div>
+                    <img class="keyword-background-bottom" src="/tips/tipBot.png">
+                </div>
             </div>
             <nav id="footer"></nav>
         </div>
