set up the ability to add buttons to the top left of the header

--- a/cards/search/index.html
+++ b/cards/search/index.html
@@ -17,7 +17,7 @@
 
     <BODY onload="doSearch()">
         <div id="page-container">
-            <nav id="header"></nav>
+            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
 
                 <H1>results view</H1>
