--- a/signin/index.html
+++ b/signin/index.html
@@ -15,7 +15,7 @@
 
     <BODY>
         <div id="page-container">
-            <nav id="header"></nav>
+            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
 
                 <form name="signup" action="" method="POST">
