--- a/cards/index.html
+++ b/cards/index.html
@@ -17,20 +17,11 @@
 
     <BODY onload="getAllCards()">
         <div id="page-container">
-            <nav id="header"></nav>
+            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
-
-                <H1>Cards</H1>
-                <P>This page will query the server for and display all cards in the database.</P>
 
                 <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
                 <button id="toggle-upgrades" onclick="toggleUpgrades()">show upgrades</button>
-                
-                <form action="/cards/search/index.html" method="GET">
-                    <label for="card">Search for a specific card:</label>
-                    <input id="search" name="search" type="text"><br><br>
-                    <input type="submit" value="Submit">
-                </form>
 
                 <div id="cards-container"></div>
             </div>
