--- a/profile/index.html
+++ b/profile/index.html
@@ -15,7 +15,7 @@
 
     <BODY>
         <div id="page-container">
-            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
+            <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
 
                 <H1>Placeholder</H1>
