--- a/cards/index.html
+++ b/cards/index.html
@@ -8,6 +8,8 @@
 
         <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript">onLoadPage();</script>
+        <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
+
         <TITLE>Cards</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/get-cards.js"></script>
@@ -17,13 +19,12 @@
 
     <BODY onload="getAllCards()">
         <div id="page-container">
-            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
+            <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
+            <script type="text/javascript">makeButton();</script>
             <div id="content-wrap">
 
-                <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
-                <button id="toggle-upgrades" onclick="toggleUpgrades()">show upgrades</button>
-
                 <div id="cards-container"></div>
+                
             </div>
             <nav id="footer"></nav>
         </div>
