--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <BODY>
         <div id="page-container">
-            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
+            <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
 
                 <H1>Introduction</H1>
