--- a/signin/index.html
+++ b/signin/index.html
@@ -7,13 +7,13 @@
         <meta content="utf-8" http-equiv="encoding">
 
         <script type="text/javascript" src="/js/check-login.js"></script>
-        <script type="text/javascript">onLoadPage();</script>
+        
         <TITLE>User Profile</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/signin.js"></script>
     </HEAD>
 
-    <BODY>
+    <BODY onload="onLoadPage();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
