--- a/contactme/index.html
+++ b/contactme/index.html
@@ -7,12 +7,11 @@
         <meta content="utf-8" http-equiv="encoding">
 
         <script type="text/javascript" src="/js/check-login.js"></script>
-        <script type="text/javascript">onLoadPage();</script>
         <TITLE>Contact Me</TITLE>
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
-    <BODY>
+    <BODY onload="onLoadPage();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
