--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <meta content="utf-8" http-equiv="encoding">
 
         <script type="text/javascript" src="/js/check-login.js"></script>
-        <script type="text/javascript">onLoadPage();</script>
+        
         <TITLE>JohnnyDevo's Site</TITLE>
         <link href='/style.css' rel='stylesheet'>
 
         <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
-    <BODY>
+    <BODY onload="onLoadPage();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
