--- a/profile/index.html
+++ b/profile/index.html
@@ -3,6 +3,8 @@
 <HTML>
 
     <HEAD>
+        <script type="text/javascript" src="/js/config.js"></script>
+        
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
