call the "get all art" method when opening art page

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -14,7 +14,7 @@
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
 
-    <BODY>
+    <BODY onload="onLoadPage()">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
