template for art search results

--- a/index.html
+++ b/index.html
@@ -24,6 +24,175 @@
                 <H1>Introduction</H1>
                 <P> On this page, I will be giving a brief introduction about myself and the purpose of this website, then I will show options for where the user can go from here. </P>
             
+                <div class="art-container">
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="art-buffer">
+                        <div class="art-info">
+                            <div class="art-image-container">
+                                <img src="/portraits/noart.png" class="art-image">
+                            </div>
+                            <div class="artist-info-container">
+                                <a href="/art?artist=1" class="artist-view-link">NotAnArtist</a>
+                                <a href="https://www.someurl.com/artistpage" class="artist-page-link">https://www.someurl.com/artistpage</a>
+                                <div class="art-card-link">
+                                    <img src="card_icon.png" class="art-card-icon">
+                                    <a href="/cards/view/index.html?cardID=hydrologistmod:UnstableStrike" class="art-card-name">Unstable Strike</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+
             </div>
             <nav id="footer"></nav>
         </div>
